--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
-        <title>My Project</title>
+        <title>Drink Water</title>
 
     </head>
     <body>
-        <h1>Project Starter</h1>
+        <h1>Drink Water</h1>      
+        <h2>Goal: 2 Liters</h2>  
+        <div class="cup">
+            <div class="remained" id="remained">
+                <span id="liters">1.5L</span>
+                <small>Remained</small>
+            </div>
+            <div class="percentage" id="percentage">
+                20%
+            </div>
+            <p class="text">Select how many glasses of water you have consumed</p>
+            <div class="cups">
+                <div class="cup cups-small full">250 ml</div>
+                <div class="cup cups-small full">250 ml</div>
+                <div class="cup cups-small">250 ml</div>
+                <div class="cup cups-small">250 ml</div>
+                <div class="cup cups-small">250 ml</div>
+                <div class="cup cups-small">250 ml</div>
+                <div class="cup cups-small">250 ml</div>
+                <div class="cup cups-small">250 ml</div>
+
+            </div>
+        </div>
+        
         <script src="script.js"></script>
     </body>
 </HTML>
