--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
     </head>
     <body>
-        <h1>Drink Water</h1>      
-        <h2>Goal: 2 Liters</h2>  
+        <h1>Drink Water</h1> 
+
+        <h2>Goal: 2 Liters</h2>
+
+         <!--big cup  -->
         <div class="cup">
             <div class="remained" id="remained">
                 <span id="liters">1.5L</span>
@@ -23,18 +26,20 @@
                 20%
             </div>
             <p class="text">Select how many glasses of water you have consumed</p>
-            <div class="cups">
-                <div class="cup cups-small full">250 ml</div>
-                <div class="cup cups-small full">250 ml</div>
-                <div class="cup cups-small">250 ml</div>
-                <div class="cup cups-small">250 ml</div>
-                <div class="cup cups-small">250 ml</div>
-                <div class="cup cups-small">250 ml</div>
-                <div class="cup cups-small">250 ml</div>
-                <div class="cup cups-small">250 ml</div>
-
-            </div>
         </div>
+
+        <!-- small cups -->
+        <div class="cups">
+            <div class="cup cups-small full">250 ml</div>
+            <div class="cup cups-small full">250 ml</div>
+            <div class="cup cups-small">250 ml</div>
+            <div class="cup cups-small">250 ml</div>
+            <div class="cup cups-small">250 ml</div>
+            <div class="cup cups-small">250 ml</div>
+            <div class="cup cups-small">250 ml</div>
+            <div class="cup cups-small">250 ml</div>
+        </div>
+
         
         <script src="script.js"></script>
     </body>
