--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
             <div class="percentage" id="percentage">
                 20%
             </div>
-            <p class="text">Select how many glasses of water you have consumed</p>
         </div>
+
+        <p class="text">Select how many glasses of water you have consumed</p>
+
 
         <!-- small cups -->
         <div class="cups">
-            <div class="cup cups-small full">250 ml</div>
-            <div class="cup cups-small full">250 ml</div>
-            <div class="cup cups-small">250 ml</div>
-            <div class="cup cups-small">250 ml</div>
-            <div class="cup cups-small">250 ml</div>
-            <div class="cup cups-small">250 ml</div>
-            <div class="cup cups-small">250 ml</div>
-            <div class="cup cups-small">250 ml</div>
+            <div class="cup cup-small full">250 ml</div>
+            <div class="cup cup-small full">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
         </div>
 
         
