--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
          <!--big cup  -->
         <div class="cup">
             <div class="remained" id="remained">
-                <span id="liters">1.5L</span>
+                <span id="liters"></span>
                 <small>Remained</small>
             </div>
             <div class="percentage" id="percentage">
-                20%
+                
             </div>
         </div>
 
@@ -32,8 +32,8 @@
 
         <!-- small cups -->
         <div class="cups">
-            <div class="cup cup-small full">250 ml</div>
-            <div class="cup cup-small full">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
             <div class="cup cup-small">250 ml</div>
             <div class="cup cup-small">250 ml</div>
             <div class="cup cup-small">250 ml</div>
