--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1>Drink Water</h1> 
 
-        <h2>Goal: 2 Liters</h2>
+        <h2>Goal: 64 Ounces</h2>
 
          <!--big cup  -->
         <div class="cup">
